--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	@font-face {
+		font-family: Merriweather, Helvetica, system-ui, sans-serif;
+	}
+}
